# yuri

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
assets/: License.txt
overlay_ports/cmakerc/: portfile.cmake  vcpkg.json
overlay_ports/lunasvg/: portfile.cmake  vcpkg.json
src/: App.cpp  App.h  BackgroundWindowView.cpp  BackgroundWindowView.h  BoardCellEffect.h  BoardView.cpp  BoardView.h  CellTargetedEffect.h  FenUtils.h  IUpdateHandler.h  LoadedPositionInfo.h  Piece.cpp  Piece.h  PieceView.cpp  PieceView.h  main.cpp
